Footer no longer has extra space.

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -22,7 +22,6 @@ a:hover
 
 .footer
   background-color: $nav-background
-  height: 100%
   padding: 2rem
 
 //http://stackoverflow.com/questions/18529274/change-navbar-color-in-twitter-bootstrap-3
